--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
+    "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -19,6 +21,7 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "node-sass": "^4.14.1",
     "prettier": "2.1.2"
   },
   "keywords": [
