--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "gatsby-plugin-breadcrumb": "^10.0.0",
+    "gatsby-remark-images": "^3.6.0",
+    "gatsby-transformer-remark-plaintext": "^1.0.3",
     "node-sass": "^4.14.1",
     "prettier": "2.1.2"
   },
