--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-breadcrumb": "^10.0.0",
     "gatsby-plugin-google-analytics": "^2.6.0",
     "gatsby-remark-images": "^3.6.0",
+    "gatsby-remark-katex": "^3.9.0",
     "gatsby-transformer-remark-plaintext": "^1.0.3",
     "node-sass": "^4.14.1",
     "prettier": "2.1.2"
