--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-plugin-sass": "^2.6.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
-    "gatsby-transformer-remark": "^2.11.1",
+    "gatsby-transformer-remark": "^2.15.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -25,10 +25,12 @@
     "gatsby-plugin-google-analytics": "^2.6.0",
     "gatsby-remark-images": "^3.6.0",
     "gatsby-remark-katex": "^3.9.0",
+    "gatsby-remark-prismjs": "^3.12.0",
     "gatsby-transformer-remark-plaintext": "^1.0.3",
     "katex": "^0.12.0",
     "node-sass": "^4.14.1",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "prismjs": "^1.23.0"
   },
   "keywords": [
     "gatsby"
